k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openaero
  labels:
    name: openaero
    app: openaero-web
